--- a/src/main/resources/templates/car.html
+++ b/src/main/resources/templates/car.html
@@ -7,8 +7,12 @@
 <body>
     <h1>KURS THYMELEAF</h1>
     <p>Hello World!</p>
-    <p th:text="${name}"></p>
-    <p th:text="${car.getMark()}"></p>
-    <p th:text="${car.getModel()}"></p>
+
+<tr th:each="car: ${cars}">
+    <td th:text="${car.getMark()}"></td>
+    <td th:text="${car.getModel()}"></td><br>
+    <p>======================</p>
+</tr>
+
 </body>
 </html>
