--- a/src/main/resources/templates/car.html
+++ b/src/main/resources/templates/car.html
@@ -14,5 +14,11 @@
     <p>======================</p>
 </tr>
 
+<form th:action="@{/add-car}" th:object="${newCar}" method="post">
+    <p>Mark: <input type="text" th:field="*{mark}"></p>
+    <p>Model: <input type="text" th:field="*{model}"></p>
+    <p><input type="submit" value="add new car"></p>
+</form>
+
 </body>
 </html>
